--- a/main.html
+++ b/main.html
@@ -2,36 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Buttons Assignment</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap CSS -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet">
 </head>
 <body class="p-4">
 
-  <h2>Bootstrap Buttons</h2>
+  <h2 class="mb-4">Bootstrap Buttons</h2>
 
   <!-- Button 1: Primary -->
-  <button id="button-1" class="btn btn-primary">Button 1</button>
+  <button id="button-1" class="btn btn-primary mb-2">Button 1</button>
 
   <!-- Button 2: Outline Secondary -->
-  <button id="button-2" class="btn btn-outline-secondary">Button 2</button>
+  <button id="button-2" class="btn btn-outline-secondary mb-2">Button 2</button>
 
   <!-- Button 3: Success Large -->
-  <button id="button-3" class="btn btn-success btn-lg">Button 3</button>
+  <button id="button-3" class="btn btn-success btn-lg mb-2">Button 3</button>
 
   <!-- Button 4: Danger Small -->
-  <button id="button-4" class="btn btn-danger btn-sm">Button 4</button>
+  <button id="button-4" class="btn btn-danger btn-sm mb-2">Button 4</button>
 
   <!-- Button 5: Warning Large Full Width -->
-  <button id="button-5" class="btn btn-warning btn-lg w-100 mt-2">Button 5</button>
+  <button id="button-5" class="btn btn-warning btn-lg w-100 mb-2">Button 5</button>
 
   <!-- Button 6: Disabled Info -->
-  <button id="button-6" class="btn btn-info" disabled>Button 6</button>
+  <button id="button-6" class="btn btn-info mb-2" disabled>Button 6</button>
 
   <!-- Button 7: Light -->
-  <button id="button-7" class="btn btn-light">Button 7</button>
+  <button id="button-7" class="btn btn-light mb-2">Button 7</button>
 
   <!-- Button 8: Link -->
-  <button id="button-8" class="btn btn-link">Button 8</button>
+  <button id="button-8" class="btn btn-link mb-2">Button 8</button>
 
 </body>
 </html>
